# practice-games-and-score-server

./: README.md  pyproject.toml
.github/workflows/: main.yml
basic_games/: __init__.py  button_masher.py  good_timing.py  submission.py
basic_games/score_server/: score_server.py
basic_games/score_server/app/: __init__.py  routes.py
basic_games/score_server/app/templates/: index.html  submit.html
basic_games/score_server/templates/: highscores.html
score_server/: __init__.py  auth_manager.py  routes.py  score_manager.py  score_server.py  wsgi.py
score_server/templates/: index.html  submissionOK.html  submit.html
tests/: conftest.py  test_score_server.py
tests/score_server/: test_auth_manager.py  test_routes.py  test_score_server.py
