[tool.poetry]
name = "basic-games"
version = "0.1.0"
description = ""
authors = ["contactandy <contactandy@duck.com>"]
readme = "README.md"
packages = [{include = "basic_games"}]

[tool.poetry.scripts]
basic-games-client = "basic_games.__init__:main"
basic-games-server = "score_server.score_server:main"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
numpy = "^1.26.2"
flask = "^3.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "PL", "YTT", "RUF"]
