[tool.poetry]
name = "basic-games"
version = "1.1.0"
description = ""
authors = ["contactandy <contactandy@duck.com>"]
readme = "README.md"
packages = [{include = "basic_games"}]

[tool.poetry.scripts]
basic-games-client = "basic_games.__init__:main"
basic-games-server = "score_server.wsgi:main"
basic-games-clear-database = "score_server.wsgi:clear_database"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"   #`<` set by pyinstaller
pygame = "^2.5.2"
numpy = "^1.26.2"
flask = "^3.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pyinstaller = "^6.3.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "PL", "YTT", "RUF"]

[tool.pytest.ini_options]
log_level = "DEBUG"
